2006-11-13  Francois Dumont  <dums@stlport...>

	* stlport/stl/_cwchar.h: Patch from Michael Fink to fix EVC3
	missing mbstate_t definition.

2006-11-07  Francois Dumont  <dums@stlport...>

	* stlport/stl/_threads.h: Removed _Atomic_swap_struct export
	that should be useless as completely inlined. Moreover it was
	generating a compilation error using MSVC 2005 under Windows
	64 bits.

2006-10-26  Francois Dumont  <dums@stlport...>

	* test/unit/codecvt_test.cpp: Removed try/catch blocks not
	supported by platform missing exception support and moreover
	useless as we know the code called in the try and this code
	do not throw (thanks Michael Fink report).

	* build/Makefiles/nmake/targetdirs.mak, lib/clean.mak, app/clean.mak:
	Complete clobber and distclean rules to really clean all generated
	stuffs.

	* build/Makefiles/nmake/top.mak: Patch from Gary Bartlett to make nmake
	'all' rule the default rule.

2006-10-25  Francois Dumont  <dums@stlport...>

	* src/dll_main.cpp: Fix syntax error '>>' rather than '> >' in
	a _STLP_alloc_proxy explicit instanciation.

	* stlport/stl/_unordered_set.h: Fix template method for the
	associative container extension, use _KT type rather than key_type.

2006-10-20  Francois Dumont  <dums@stlport...>

	* stlport/stl/config: Removed some used macros
	  _STLP_AUTOMATIC_TYPE_TRAITS
	  _STLP_UNINITIALIZABLE_PRIVATE
	  _STLP_STATIC_ARRAY_BUG
	  _STLP_FULL_ADL_IMPLEMENTED

	* test/unit/codecvt_test.cpp: Ignore test when
	_STLP_NO_MEMBER_TEMPLATES defined.

2006-10-20  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stl/_cwchar.h: fix HP-UX problem with WCHAR_MIN, WCHAR_MAX
	[Boris Gubenko].

2006-10-19  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* test/unit/sstream_test.cpp: check bugreport #1580020, not confirmed.

2006-10-17  Francois Dumont  <dums@stlport...>

	* stlport/stl/_cwchar.h: Restore code to define potentially missing
	WCHAR_MIN, WCHAR_MAX macros. It used to be in _mbstate_t.h but was