@@ -1,3 +1,8 @@
+2006-11-16  Francois Dumont  <dums@stlport...>
+
+	* test/unit/resolve_name.cpp: Clean most of MSVC6 workaround, only
+	one has been kept to have the test pass.
+
 2006-11-13  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/_cwchar.h: Patch from Michael Fink to fix EVC3
